# SDI

./: .gitignore  CMakeLists.txt  Database_Data.txt  GenMakefile.sh  Makefile  SDI-Tests.pro  SDI.pro  SDI.pro.user.4.9-pre1  memcheck.sh  run.sh  user_input_management.cpp
data/: Crew_Member_Info.txt  Database_Data.txt  Film_Info.txt  Film_Info_backup.txt  Material_Data.txt  logFile.txt  test.txt
headers/: Browser.h  Controller.h  FileHandler.h  Film.h  FilmProject.h  GUI.h  InputHandler.h  Material.h  Search.h  View.h
src/: Browser.cpp  Controller.cpp  FileHandler.cpp  Film.cpp  FilmProject.cpp  GUI.cpp  InputHandler.cpp  Material.cpp  SDI-tests.cpp  Search.cpp  View.cpp  main.cpp
